# Hand_Detect

./: CMakeLists.txt  README.md
include/: BYTETracker.h  yoloV8.h
src/: BYTETracker.cpp  STrack.cpp  kalmanFilter.cpp  utils.cpp  yoloV8.cpp  yolov8main.cpp
